--- a/Basic-Linear-Regression.ipynb
+++ b/Basic-Linear-Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a5339321",
+   "id": "669f2539",
    "metadata": {},
    "source": [
     "# Honey Production\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a9c987e6",
+   "id": "5ed1d1ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e93b74dd",
+   "metadata": {},
+   "source": [
+    "# Check out the Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "22ea50a4",
+   "id": "51840db2",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cfae228e",
+   "id": "8ee61456",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8d89e1af",
+   "id": "08d1bbc1",
    "metadata": {},
    "outputs": [
     {
@@ -327,16 +335,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab489238",
+   "id": "e9db9b15",
    "metadata": {},
    "source": [
-    "We see a vaguely linear relationship between these variables ."
+    "We see a vaguely linear relationship between these variables .\n",
+    "\n",
+    "# Create and Fit a Linear Regression Model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c8a27ad5",
+   "id": "bb1a4b6e",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c3af3cf5",
+   "id": "9089632d",
    "metadata": {},
    "outputs": [
     {
@@ -395,17 +405,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4e2d9a7",
+   "id": "3b9fabe2",
    "metadata": {},
    "source": [
     "\n",
-    "So, it looks like the production of honey has been in decline, according to this linear model. Let’s predict what the year 2050 may look like in terms of honey production."
+    "So, it looks like the production of honey has been in decline, according to this linear model. Let’s predict what the year 2050 may look like in terms of honey production.\n",
+    "\n",
+    "# Predict the Honey Decline"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "386c9d01",
+   "id": "122207dd",
    "metadata": {},
    "outputs": [
     {
@@ -442,10 +454,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e72880e",
+   "id": "7fcb8f10",
    "metadata": {},
    "source": [
-    "Acoording to our model the Average Honey Production will be less tha 0.5"
+    "Acoording to our model the Average Honey Production will be less than 0.5"
    ]
   }
  ],
