--- a/Basic-Clustering-ML.ipynb
+++ b/Basic-Clustering-ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1b2a0f08",
+   "id": "7ffb1d49",
    "metadata": {},
    "source": [
     "# Handwriting Recognition using K-Means\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0276cc4d",
+   "id": "29659286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9412b705",
+   "id": "2df3bb67",
    "metadata": {},
    "source": [
     "# Investigating Dataset"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "678585ed",
+   "id": "6ca40ca1",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cd320c97",
+   "id": "c98ec8a4",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "de16b43d",
+   "id": "6d97a35e",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8572646c",
+   "id": "a12d42d8",
    "metadata": {},
    "source": [
     " # Making Our Model"
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "5b646873",
+   "id": "097857da",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "48065ce0",
+   "id": "1f1a6e8e",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ea96135",
+   "id": "3a1890bd",
    "metadata": {},
    "source": [
     "These are the centroids of handwriting from thirty different people collected by Bogazici University (Istanbul, Turkey):\n",
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35f9cc44",
+   "id": "a679a63f",
    "metadata": {},
    "source": [
     "# Testing Your Model\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ee157240",
+   "id": "601c34bb",
    "metadata": {},
    "outputs": [
     {
@@ -428,10 +428,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5346097f",
+   "id": "6581a1ea",
    "metadata": {},
    "source": [
-    "# We have some new sample for 1,9,5,1 =  [\n",
+    "# We have some new sample\n",
+    "for 1,9,5,1 =  [\n",
     "[0.00,0.00,0.08,0.93,0.00,0.00,0.00,0.00,0.00,0.00,1.60,6.66,0.00,0.00,0.00,0.00,0.00,0.00,1.68,6.74,0.00,0.00,0.00,0.00,0.00,0.00,2.61,6.65,6.91,0.92,0.00,0.00,0.00,0.00,4.72,7.67,8.42,4.04,0.00,0.00,0.00,0.00,2.61,3.53,3.70,6.40,0.00,0.00,0.00,0.00,0.00,0.00,2.61,6.40,0.00,0.00,0.00,0.00,0.00,0.00,0.00,0.00,0.00,0.00],\n",
     "[0.00,0.00,0.00,3.96,3.11,0.00,0.00,0.00,0.00,0.00,0.08,6.82,3.12,0.00,0.00,0.00,0.00,0.00,1.68,7.59,0.16,0.00,0.00,0.00,0.00,0.00,5.39,3.88,0.84,4.80,0.00,0.00,0.00,1.26,8.26,2.27,2.19,8.34,0.75,0.00,0.00,1.34,5.90,6.66,6.74,8.09,1.68,0.00,0.00,0.00,0.00,0.00,0.00,6.83,2.53,0.00,0.00,0.00,0.00,0.00,0.00,2.61,0.58,0.00],\n",
     "[0.00,1.35,4.12,0.00,0.00,0.00,0.00,0.00,0.00,0.50,8.26,0.17,0.00,0.00,0.00,0.00,0.00,0.00,7.59,0.84,0.00,0.00,0.00,0.00,0.00,0.00,7.59,0.84,2.94,5.14,0.00,0.00,0.00,0.00,7.58,8.43,8.42,7.50,0.00,0.00,0.00,0.00,1.68,0.50,0.84,7.75,0.00,0.00,0.00,0.00,0.00,0.00,0.67,8.35,0.34,0.00,0.00,0.00,0.00,0.00,0.00,1.17,0.00,0.00],\n",
@@ -449,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "cea32bbd",
+   "id": "58ff1bb8",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d95db344",
+   "id": "1c2c8b02",
    "metadata": {},
    "source": [
     "Remember, this model is trained on handwritten digits of 30 Turkish people (from the 1990’s).\n",
